leftmenu and account added

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -20,7 +20,10 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-sm-12 col-xs-12">
-                <h2 class="logo"><a href="#"><img src="../../../img/SC-logo-white.png" width="170px"/></a></h2>
+                <h2 class="logo"><a href="#">
+                  <!--<img src="../../../img/SC-logo-white.png" width="170px"/>-->
+                  <img src="../../../assets/img/SC-logo-white.png" width="170px" alt="logo">
+                </a></h2>
             </div>
 
             <div class="col-md-2 col-sm-12 col-xs-12">
