--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -6,7 +6,7 @@
             <i class="fa fa-bars"></i>
         </a>
         <a class="navbar-brand logo float-left" routerLink="/" (click)="collapseNavbar()">
-            <span class="logo-img"><img src="img/logo.png" width="230px;"/></span>
+            <span class="logo-img"><img src="../../../assets/img/logo.png" width="230px;"/></span>
             <!--<span class="navbar-version">{{version}}</span>-->
         </a>
     </div>
