app structure updated

--- a/src/app/admin/user-management/user-management.component.html
+++ b/src/app/admin/user-management/user-management.component.html
@@ -33,7 +33,7 @@
             </tr>
             </thead>
             <tbody *ngIf="users">
-            <tr *ngFor="let user of users; trackBy: trackIdentity">
+            <tr *ngFor="let user of users| paginate: { itemsPerPage: 10, currentPage: p2 }; trackBy: trackIdentity">
                 <td><a [routerLink]="['../user-management', user.login]">{{user.id}}</a></td>
                 <td>{{user.login}}</td>
                 <td>{{user.email}}</td>
@@ -83,13 +83,7 @@
             </tbody>
         </table>
     </div>
-    <!--<div *ngIf="users">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [pageSize]="itemsPerPage" [(page)]="page"
-                            (pageChange)="loadPage(page)"></ngb-pagination>
-        </div>
-    </div>-->
+    <div *ngIf="users">
+        <pagination-controls (pageChange)="p2 = $event"></pagination-controls>
+    </div>
 </div>
