--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -13,10 +13,9 @@
 </div>
 
 <!--*ngIf="globalValues.role != 'ROLE_ADMIN'"-->
-<!--
-<div>
+<!--<div>
     <div class="wrapper">
-        &lt;!&ndash;<leftmenu></leftmenu>&ndash;&gt;
+      <app-left-menu></app-left-menu>
         <div class="main-panel">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
@@ -36,5 +35,4 @@
         </div>
         <div style="margin-top: 70px"></div>
     </div>
-</div>
--->
+</div>-->
