--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,48 +1,43 @@
 <div class="modal-header">
-    <h4 class="modal-title" jhiTranslate="login.title">Sign in</h4>
-    <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')">
-        <span aria-hidden="true">x</span>
-    </button>
+  <h4 class="modal-title">Sign in</h4>
+  <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')">
+    <span aria-hidden="true">x</span>
+  </button>
 </div>
 <div class="modal-body">
-    <div class="row justify-content-center">
-        <div class="col-12">
-            <div class="alert alert-danger" *ngIf="authenticationError"
-                 jhiTranslate="login.messages.error.authentication">
-                <strong>Failed to sign in!</strong> Please check your credentials and try again.
-            </div>
+  <div class="row justify-content-center">
+    <div class="col-12">
+      <div class="alert alert-danger" *ngIf="authenticationError">
+        <strong>Failed to sign in!</strong> Please check your credentials and try again.
+      </div>
+    </div>
+    <div class="col-md-12">
+      <form class="form" role="form" (ngSubmit)="login()" #form="ngForm">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" name="username" id="username"
+                 [(ngModel)]="username">
         </div>
-        <div class="col-md-12">
-            <form class="form" role="form" (ngSubmit)="login()" #form="ngForm">
-                <div class="form-group">
-                    <label for="username" jhiTranslate="global.form.username">Login</label>
-                    <input type="text" class="form-control" name="username" id="username"
-                           placeholder="{{'global.form.username.placeholder' | translate}}"
-                           [(ngModel)]="username">
-                </div>
-                <div class="form-group">
-                    <label for="password" jhiTranslate="login.form.password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password"
-                           placeholder="{{'login.form.password.placeholder' | translate}}"
-                           [(ngModel)]="password">
-                </div>
-                <div class="form-check">
-                    <label class="form-check-label" for="rememberMe">
-                        <input class="form-check-input" style="width:15px; height:15px;" type="checkbox"
-                               name="rememberMe" id="rememberMe" [(ngModel)]="rememberMe" checked>
-                        <span jhiTranslate="login.form.rememberme" style="">Remember me</span>
-                        <span><a class="" style="color:#66bac1;" (click)="requestResetPassword()"
-                                 jhiTranslate="login.password.forgot">
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" id="password"
+                 [(ngModel)]="password">
+        </div>
+        <div class="form-check">
+          <label class="form-check-label" for="rememberMe">
+            <input class="form-check-input" style="width:15px; height:15px;" type="checkbox"
+                   name="rememberMe" id="rememberMe" [(ngModel)]="rememberMe" checked>
+            <span style="">Remember me</span>
+            <span><a class="" style="color:#66bac1;" (click)="requestResetPassword()">
                             Forget password?</a></span>
-                    </label>
-                </div>
-                <hr/>
-                <div>
-                    <!--<button type="button" class="alr-btn" (click)="register()" jhiTranslate="global.messages.info.register.link">Create a new account</button>-->
-                    <button type="submit" class="btn reg-btn" jhiTranslate="login.form.button">Sign in</button>
-                </div>
-            </form>
-            <p></p></div>
-
-        <!-- here was social media sign up -->
-
+          </label>
+        </div>
+        <hr/>
+        <div>
+          <button type="submit" class="btn reg-btn">Sign in</button>
+        </div>
+      </form>
+      <p></p>
+    </div>
+  </div>
+</div>
